--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "yup": "^0.28.5"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "react-scripts start",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm run build",
